# infradocs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EULA.md  LICENSE-COMMERCIAL.md  LICENSE.txt  Quick-Start-Guide.md  README.md  ROADMAP.md  SECURITY.md  coverage.xml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
docs/: configuration.md  demo-screenshots.html  faq.md  index.html  input-formats.md  installation.md  templates.md  troubleshooting.md
docs/demo-site/: change-log.html  circuits.html  devices.html  emergency.html  index.html  printers.html  search-index.json  sites.html  subnets.html  vendors.html  vlans.html
sales/: README.md  email-sequence.md  gumroad-listing.md  social-copy.md
sample-data/: change-log.csv  circuits.yaml  config.yaml  devices.yaml  emergency-contacts.yaml  printers.yaml  sites.yaml  subnets.yaml  vendors.yaml  vlans.yaml
src/infradocs/: __init__.py  cli.py  config.py  generator.py  loader.py  search_index.py  templates.py  utils.py  validator.py
templates/: base.html  change-log.html  circuit.html  device.html  emergency.html  index.html  printer.html  site.html  subnet.html  vendor.html  vlan.html
templates/assets/: search.js  style.css
tests/: test_cli.py  test_generator.py  test_loader.py  test_smoke.py  test_validator.py
