[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infradocs"
version = "1.0.0"
description = "Generate static IT infrastructure documentation websites from YAML, JSON, and CSV files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "InfraDocs", email = "support@nexuframe.com"}
]
keywords = ["infrastructure", "documentation", "network", "IT", "static-site", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
infradocs = "infradocs.cli:app"

[project.urls]
Homepage = "https://github.com/NexuFrame/infradocs"
Documentation = "https://github.com/NexuFrame/infradocs#readme"
Repository = "https://github.com/NexuFrame/infradocs.git"
Issues = "https://github.com/NexuFrame/infradocs/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
